mix mobile spacing issue between character cards and game board

--- a/style.css
+++ b/style.css
@@ -83,6 +83,16 @@ body{
     margin-top:5px;
     flex-wrap:wrap /*ensures elements dont overlay or squeeze in order to fit frame*/
 }
+@media (max-width:768px){
+     .character-cards{
+        flex-direction:column;
+        align-items:center;
+        gap:0.5rem; /*reduce space between stacked elements*/
+    }
+    #game-board{
+        margin:5px auto;
+    }
+}
 .character-card{
     width:200px;
     height:300px;
